kubernetes/app-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
      version: v1
  template:
    metadata:
      labels:
        app: app-frontend
        version: v1
    spec:
      containers:
      - name: app-frontend
        image: ghcr.io/remla24-team3/app-frontend:latest
        ports:
        - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend-experiment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
      version: v2
  template:
    metadata:
      labels:
        app: app-frontend
        version: v2
    spec:
      containers:
      - name: app-frontend
        image: ghcr.io/remla24-team3/app-frontend:experiment
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  selector:
    app: app-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
