kubernetes/app-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
      - name: app-service
        image: ghcr.io/remla24-team3/app-service:test
        ports:
        - containerPort: 106
---

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-service
  ports:
    - name: http
      protocol: TCP
      port: 106
      targetPort: 106
  type: LoadBalancer
