kubernetes/http-bin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: httpbin
  namespace: rate-limit
spec:
  serviceName: "httpbin"
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: rate-limit
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sleep
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: rate-limit
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: rate-limit
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sleep
