kubernetes/model-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
      - name: model-service
        image: ghcr.io/remla24-team3/model-service:latest
        ports:
        - containerPort: 105
        volumeMounts:
        - name: model-volume
          mountPath: /app/model
      volumes:
      - name: model-volume
        hostPath:
          path: /vagrant/model
          type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - name: http
      protocol: TCP
      port: 105
      targetPort: 105
  type: LoadBalancer
