kubernetes/monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
    - port: 8100
      targetPort: 8443
      nodePort: 30001
  selector:
    app: kubernetes-dashboard-kong
