kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-frontend
spec:
  selector:
    app: myapp
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
    - name: service
      protocol: TCP
      port: 5000
      targetPort: 5000
