kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-frontend
            port:
              number: 3000
      - path: /backend/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-service
            port:
              number: 106
      - path: /model/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: model-service
            port:
              number: 105
