kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule-frontend
spec:
  host: app-frontend.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule-backend
spec:
  host: app-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule-model
spec:
  host: model-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboards-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali-dashboard
        port:
          number: 20001
  - match:
    - uri:
          prefix: /jaeger
    route:
    - destination:
        host: jaeger-dashboard
        port:
          number: 16686
  - match:
    - uri:
          prefix: /grafana
    route:
    - destination:
        host: grafana
        port:
          number: 3000
  - match:
    - uri:
        prefix: /prometheus/
    route:
      - destination:
          host: prometheus
          port:
            number: 9090
    rewrite:
      uri: /
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app-frontend.default.svc.cluster.local
        port:
          number: 3000
  - match:
    - uri:
          prefix: /backend
    route:
    - destination:
        host: app-service.default.svc.cluster.local
        port:
          number: 106
  - match:
    - uri:
        prefix: /model
    route:
      - destination:
          host: model-service.default.svc.cluster.local
          port:
            number: 105
